--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ toml==0.10.2
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 zipp==3.4.1
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
+requests==2.25.1
